--- a/Welcome.html
+++ b/Welcome.html
@@ -1,4 +1,11 @@
-﻿<!-- #######  YAY, I AM THE SOURCE EDITOR! #########-->
+<html>
+<body style="
+    background-image: url('Back.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;"
+>
+<!-- #######  YAY, I AM THE SOURCE EDITOR! #########-->
 <h1 style="color: #5e9ca0;">Ponnappa Software Services &amp; Solutions</h1>
 <p>Product Development Services</p>
 <p>Research and Development&nbsp; Services</p>
@@ -104,7 +111,7 @@
 </tr>
 <tr>
 <td>Encode special characters</td>
-<td><span style="color: red; font-size: 17px;">&hearts;</span> <strong style="font-size: 20px;">☺ ★</strong> &gt;&lt;</td>
+<td><span style="color: red; font-size: 17px;">&hearts;</span> <strong style="font-size: 20px;">? ?</strong> &gt;&lt;</td>
 <td><strong style="font-size: 17px; color: #2b2301;">x</strong></td>
 </tr>
 <tr>
@@ -117,3 +124,5 @@
 <p><strong>&nbsp;</strong></p>
 <p><strong>Save this link into your bookmarks and share it with your friends. It is all FREE! </strong><br /><strong>Enjoy!</strong></p>
 <p><strong>&nbsp;</strong></p>
+</body>
+</html>
